--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 body {
     background-image: url('images/dan-cristian-padure-h3kuhYUCE9A-unsplash.jpg');
     background-size: cover;
+    background-color: black;
     color: white;
+    text-shadow: 1px 1px 2px black;
 }
